message Point3d {
    required int32 x = 1;
    required int32 y = 2;
    required int32 z = 3;
}

message Subvolume {
    required string dataset = 1;
    required Point3d offset = 2;
    required Point3d size = 3;
    optional bytes data = 4;
}